# sauspiel-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  alembic.ini  app.json  docker-compose.yml  flake.nix  pr_body.md  prek.toml  pyproject.toml  test_pydantic_error.py  test_pydantic_meta.py
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 64c416aee859_initial_migration.py
docs/brainstorms/: 2026-04-25-architecture-decoupling-requirements.md  2026-04-25-efficient-scraping-requirements.md  2026-05-09-dokku-postgres-migration-requirements.md
docs/deployment/: dokku.md
docs/plans/: 2026-04-25-001-refactor-architecture-decoupling-plan.md  2026-04-25-002-feat-processed-game-model-and-profit-fix-plan.md  2026-04-25-003-feat-parallel-rate-limited-scraper-plan.md  2026-05-09-001-feat-dokku-postgres-migration-plan.md
docs/solutions/: sauspiel-profit-calculation-2026-04-25.md  streamlit-standards-2026-04-25.md
docs/solutions/architecture-patterns/: architectural-decoupling-pydantic-2026-04-25.md
docs/solutions/performance-issues/: parallel-rate-limited-scraper-2026-04-26.md
docs/superpowers/plans/: 2026-05-08-fastapi-monolith-migration.md
docs/superpowers/specs/: 2026-05-08-fastapi-monolith-multiuser-design.md
scripts/: migrate_sqlite_to_postgres.py
src/sauspiel_scraper/: __init__.py  app.py  core.py  main.py  models.py  rate_limiter.py  repository.py
src/sauspiel_scraper/app/: __init__.py  analytics.py  auth.py  keygen.py  main.py  presentation.py  processing.py  session.py
src/sauspiel_scraper/app/templates/: base.html  dashboard.html  login.html
tests/: conftest.py  test_app.py  test_auth.py  test_background_worker.py  test_core.py  test_main.py  test_main_parallel.py  test_parser.py  test_rate_limiter.py  test_repository.py  test_repository_multiuser.py  test_ui_processing.py  test_web_scaffold.py
tests/fixtures/: detail.html  overview.html
